[package]
name = "iso10962-types"
description = "ISO 10962 Types for Classification of Financial Instruments"
readme = true
authors.workspace = true
categories = [
  "data-structures",
  "finance",
  "internationalization",
  "no-std",
  "no-std::no-alloc",
]
edition.workspace = true
keywords = ["iso10963", "cfi"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc", "serde"]
alloc = ["serde?/alloc"]
serde = ["dep:serde"]

[dependencies]
pastey = "0.2.1"
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }
thiserror = { version = "2", default-features = false }
yare.workspace = true

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
